--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,14 @@
 <div>
-    <ul>
-        <li ng-repeat="m in vm.todaysMenu">
-            <h2>{{m.restaurant}}</h2>
-            <div>{{m.dish}}</div>
-        </li>
-    </ul>
+    <div ng-hide="vm.isLoaded">loading...</div>
+    <div ng-show="vm.isLoaded" ng-hide="vm.isWeekend">
+        <ul>
+            <li ng-repeat="m in vm.todaysMenu">
+                <h2>{{m.restaurant}}</h2>
+                <div>{{m.dish}}</div>
+            </li>
+        </ul>
+    </div>
+    <div ng-show="vm.isWeekend">
+        Nästa veckas menyer har inte hämtats än.
+    </div>
 </div>
