Add link to each restaurant's website

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
     <div ng-hide="vm.isLoaded">loading...</div>
     <div ng-show="vm.isLoaded" ng-hide="vm.isWeekend">
         <div ng-repeat="m in vm.todaysMenu" class="restaurant-panel">
-            <h2>{{m.restaurant}}</h2>
+            <h2><a ng-href="{{m.url}}">{{m.restaurant}}</a></h2>
             <div>{{m.dish}}</div>
         </div>
     </div>
