--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,12 +59,12 @@ h2 {
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
-.links {
+footer {
   font-size: .8em;
   margin: 10px 0;
 }
 
-.links img {
+footer img {
   width: 20px;
   height: 20px;
   position: relative;
