--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -36,6 +36,16 @@ h2 {
   font-weight: 700;
 }
 
+.loading-icon {
+  width: 32px;
+  margin: 0 auto;
+}
+
+.loading-icon img {
+  width: 32px;
+  height: 32px;
+}
+
 .restaurant-panel {
   display: inline-block;
   vertical-align: top;
